--- a/app/templates/product_detail.html
+++ b/app/templates/product_detail.html
@@ -66,6 +66,38 @@
                 {% endif %}
             </div>
 
+            <div class="product-reviews">
+                <h3>Customer Reviews</h3>
+                {% if reviews %}
+                <ul class="reviews-list">
+                    {% for review in reviews %}
+                    <li class="review-item">
+                        <div class="review-header">
+                            <span class="user-id">User: {{ review.user_id }}</span>
+                            <span class="review-date">{{ review.date }}</span>
+                        </div>
+                        <div class="rating">
+                            Rating:
+                            {% for i in range(5) %}
+                            {% if i < review.rating|int %} <i class="fas fa-star"></i>
+                                {% else %}
+                                <i class="far fa-star"></i>
+                                {% endif %}
+                                {% endfor %}
+                                <span class="rating-value">({{ review.rating }})</span>
+                        </div>
+                        <div class="review-stats">
+                            <span class="helpful">{{ review.helpful }} of {{ review.votes }} people found this
+                                helpful</span>
+                        </div>
+                    </li>
+                    {% endfor %}
+                </ul>
+                {% else %}
+                <p>No reviews found for this product.</p>
+                {% endif %}
+            </div>
+
             <div class="copurchased-products">
                 <h3>Frequently Bought Together</h3>
                 {% if copurchased_products %}
