--- a/app/templates/product_detail.html
+++ b/app/templates/product_detail.html
@@ -52,6 +52,10 @@
             <span class="label">Sales Rank:</span>
             <span class="value">{{ product.salesrank }}</span>
           </div>
+          <div class="detail-item">
+            <span class="label">Total Score:</span>
+            <span class="value">{{ product.total_score }}</span>
+          </div>
         </div>
 
         <div class="product-categories">
